Decrease font size of contact email on mobile width to prevent wrapping

--- a/app/routes/home/contact-section.module.css
+++ b/app/routes/home/contact-section.module.css
@@ -54,7 +54,7 @@
   min-width: 0;
 
   @media (--mediaMobile) {
-    font-size: 0.875rem;
+    font-size: 0.75rem;
   }
 }
 
